# serializer version: 1
# name: test_filter_node
  <ExceptionInfo ValueError('Expected 2 inputs, got 3') tblen=4>
# ---
# name: test_filter_node.1
  <ExceptionInfo ValueError('Expected input 1 to have video component, got AudioStream') tblen=4>
# ---
